Change any Entity and create register form

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -29,6 +29,10 @@ services:
         public: true
         tags: ['controller.service_arguments']
 
+    register_service:
+        class: AppBundle\Service\RegisterService
+        public: true
+
     # add more services, or override services that need manual wiring
     # AppBundle\Service\ExampleService:
     #     arguments:
