--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -32,6 +32,8 @@ services:
     register_service:
         class: AppBundle\Service\RegisterService
         public: true
+        arguments:
+            - '@doctrine'
 
     # add more services, or override services that need manual wiring
     # AppBundle\Service\ExampleService:
