--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -44,4 +44,5 @@ security:
             #form_login: ~
 
     access_control:
+        - { path: /, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin, roles: ROLE_ADMIN }
