--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -35,6 +35,12 @@ services:
         arguments:
             - '@doctrine'
 
+    forgot_password:
+        class: AppBundle\Service\ForgotService
+        public: true
+        arguments:
+            - '@doctrine'
+
     # add more services, or override services that need manual wiring
     # AppBundle\Service\ExampleService:
     #     arguments:
