Add edit categories controller

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -46,4 +46,5 @@ security:
 
     access_control:
         - { path: /, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /categories, roles: ROLE_MODERATOR }
         - { path: ^/admin, roles: ROLE_ADMIN }
