--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,14 +1,10 @@
-# To get started with security, check out the documentation:
-# https://symfony.com/doc/current/security.html
 security:
     encoders:
         AppBundle\Entity\User:
             algorithm: bcrypt
+            cost: 12
 
-    # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
-        #in_memory:
-        #    memory: ~
         our_db_provider:
             entity:
                 class: AppBundle:User
@@ -20,7 +16,6 @@ security:
         ROLE_ADMIN:     ROLE_MODERATOR
 
     firewalls:
-        # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
@@ -35,13 +30,7 @@ security:
             logout:
                 path:   /logout
                 target: /
-            # activate different ways to authenticate
-
-            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-            #http_basic: ~
-
-            # https://symfony.com/doc/current/security/form_login_setup.html
-            #form_login: ~
 
     access_control:
+        - { path: /, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin, roles: ROLE_ADMIN }
