--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -48,6 +48,12 @@ services:
         arguments:
             - '@doctrine'
 
+    category:
+        class: AppBundle\Service\CategoryService
+        public: true
+        arguments:
+            - '@doctrine'
+
     # add more services, or override services that need manual wiring
     # AppBundle\Service\ExampleService:
     #     arguments:
