--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -54,6 +54,12 @@ services:
         arguments:
             - '@doctrine'
 
+    products:
+        class: AppBundle\Service\ProductService
+        public: true
+        arguments:
+            - '@doctrine'
+
     # add more services, or override services that need manual wiring
     # AppBundle\Service\ExampleService:
     #     arguments:
