update page of products

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -42,3 +42,4 @@ services:
         tags:
             - { name: knp_menu.menu_builder, method: createMainMenu, alias: main }
             - { name: knp_menu.menu_builder, method: createSidebarMenu, alias: sidebar }
+            - { name: knp_menu.menu_builder, method: createSmallMenu, alias: accordeon }
