--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -16,6 +16,12 @@ services:
         public: true
         tags: ['controller.service_arguments']
 
+    login_service:
+        class: AppBundle\Service\LoginService
+        public: true
+        arguments:
+            - '@doctrine'
+
     register_service:
         class: AppBundle\Service\RegisterService
         public: true
@@ -31,6 +37,18 @@ services:
 
     reset_password:
         class: AppBundle\Service\ResetService
+        public: true
+        arguments:
+            - '@doctrine'
+
+    category:
+        class: AppBundle\Service\CategoryService
+        public: true
+        arguments:
+            - '@doctrine'
+
+    products:
+        class: AppBundle\Service\ProductService
         public: true
         arguments:
             - '@doctrine'
