--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -32,6 +32,7 @@ security:
             form_login:
                 login_path: login
                 check_path: login
+                default_target_path: homepage
 
             logout:
                 path:   /logout
