--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -11,7 +11,7 @@ parameters:
 framework:
     #esi: ~
     #translator: { fallbacks: ['%locale%'] }
-    translator: { fallbacks: [en] }
+    translator: { fallbacks: [en, ru] }
     secret: '%secret%'
     router:
         resource: '%kernel.project_dir%/app/config/routing.yml'
